--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,9 @@
-
-.nav-section{
+.nav-section {
     display: flex;
     width: 900px;
     margin-left: 20px 10px;
     justify-items: center;
-    
+
 }
 
 
@@ -13,8 +12,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px; 
-    height: 50px; 
+    width: 50px;
+    height: 50px;
     border-radius: 0%;
     overflow: hidden;
     margin-right: 20px;
@@ -28,22 +27,25 @@
     background-image: var(--theme-color);
 }
 
-.nav-section1{.searchbar {
-    display: flex;
-    align-items: center;
-    border: 1px solid #68837a;
-    padding: 10px 0px 10px 1;
-    border-radius: 5px;
-    width: 300px; /* Adjust the width as needed */
-}
+.nav-section1 {
+    .searchbar {
+        display: flex;
+        align-items: center;
+        border: 1px solid #68837a;
+        padding: 10px 0px 10px 1;
+        border-radius: 5px;
+        width: 300px;
+        /* Adjust the width as needed */
+    }
 
 
-.searchbar input[type="text"] {
-    border: none;
-    outline: none;
-    flex: 1;
-    font-size: 16px;
-}
+    .searchbar input[type="text"] {
+        border: none;
+        outline: none;
+        flex: 1;
+        font-size: 16px;
+    }
+
     display: flex;
     justify-content: center;
     margin-top: 10px;
@@ -51,14 +53,14 @@
     flex: 1;
 }
 
-.textName{
+.textName {
     align-self: center;
     flex-grow: 1;
     display: flex;
     color: var(--theme-color);
 }
 
-.textName h1{
+.textName h1 {
     margin-left: 10px;
     font-size: 20px;
     font-weight: bold;
@@ -68,8 +70,10 @@
 }
 
 .textName img {
-    width: 20px; /* Adjust the image width as needed */
-    margin-left: 10px; /* Add spacing between the image and text */
+    width: 20px;
+    /* Adjust the image width as needed */
+    margin-left: 10px;
+    /* Add spacing between the image and text */
 }
 
 
@@ -78,28 +82,28 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
+}
 
-  .text1 {
+.text1 {
     display: flex;
     align-items: center;
     color: var(--theme-color);
-  }
+}
 
-  .text1 img {
+.text1 img {
     width: 20px;
     height: 20px;
     margin-right: 10px;
     color: var(--theme-color);
-  }
+}
 
-  .text1 a {
+.text1 a {
     text-decoration: none;
     color: var(--theme-color);
     font-size: 14px;
-  }
+}
 
-  .text2 h1 {
+.text2 h1 {
     font-size: 28px;
     color: var(--theme-color);
 }
@@ -237,13 +241,20 @@
 }
 
 
-  
+
 .side-bar {
     padding: 25px;
     order: 1;
     flex-basis: 25%;
     box-sizing: border-box;
     margin-top: -100px;
+}
+
+.company-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 100px;
 }
 
 .company-logo h1 {
@@ -273,7 +284,7 @@
 .company-address1 p,
 .contact-address1 p,
 .company-address2 p,
-.contact-address2 p{
+.contact-address2 p {
     font-size: 16px;
     margin: 10px;
 }
@@ -396,8 +407,28 @@
     .box-section .box1,
     .box-section .box2,
     .box-section .box3 {
-        border-right: none;
+        padding-right: 40px;
+        border-right: 2px solid #e2e6e5;
         padding-right: 0;
+    }
+
+    .box-section .box1 h1,
+    .box-section .box2 h1,
+    .box-section .box3 h1,
+    .box-section .box4 h1 {
+        font-size: 14px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .box-section .box1 p,
+    .box-section .box2 p,
+    .box-section .box3 p,
+    .box-section .box4 p{
+        font-size: 10px;
+        text-align: center;
+        text-decoration: none;
     }
 
     .chartflow {
@@ -406,6 +437,8 @@
     }
 
     .side-bar {
+        display: flex;
+        flex-direction: column;
         flex-basis: 100%;
         order: 2;
         margin-top: 0;
@@ -415,11 +448,14 @@
         padding: 10px;
     }
 
+    .company-logo {
+        padding-left: 0px;
+    }
+
     .company-logo h1 {
-        font-size: 10px;
+        /* justify-content: center; */
+        font-size: 9px;
         width: 80px;
         height: 80px;
     }
 }
-  
-  
