--- a/styles/style.css
+++ b/styles/style.css
@@ -243,6 +243,7 @@
 
 
 .side-bar {
+    position: relative;
     padding: 25px;
     order: 1;
     flex-basis: 25%;
@@ -261,7 +262,7 @@
     background-color: black;
     font-size: 8px;
     color: #ebedf0;
-    margin: 0;
+    margin-right: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
