--- a/styles/style.css
+++ b/styles/style.css
@@ -215,13 +215,13 @@
 
 .chartflow {
     /* background-color: #f5f5f5; */
-    padding: 20px;
+    /* padding: 20px; */
     margin-top: 10px;
     border: 2px solid #e2e6e5;
     border-radius: 8px;
     order: 1;
     flex-basis: 70%;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 .chartflow .text {
@@ -255,14 +255,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 100px;
+    padding-left: 90px;
+    margin-top: 20px;
 }
 
 .company-logo h1 {
     background-color: black;
     font-size: 8px;
     color: #ebedf0;
-    margin-right: 30px;
+    /* margin-right: 30px; */
     display: flex;
     justify-content: center;
     align-items: center;
