--- a/styles/common.css
+++ b/styles/common.css
@@ -16,12 +16,12 @@
     gap: 30px;
 }
 
-.body{
+/* .body{
     padding: 10px 30px;
-}
+} */
 
 .button{
-    padding: 5px 10px;
+    /* padding: 10px 10px; */
     border-radius: 10px;
     border: none;
     background-color: #2390f6;
