--- a/styles/style.css
+++ b/styles/style.css
@@ -218,8 +218,8 @@
 
 .company-logo {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    flex-direction: column;
     padding-left: 10px;
     margin-top: 10px;
 }
@@ -385,6 +385,8 @@
     }
 
     .company-logo {
+        display: flex;
+        justify-content: center;
         padding-left: 0px;
     }
 
