--- a/styles/common.css
+++ b/styles/common.css
@@ -7,7 +7,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+/* 
 .page-container{
     max-width: 1000px;
     margin: 0px auto;
@@ -20,11 +20,11 @@
     padding: 10px 30px;
 } */
 
-.button{
-    /* padding: 10px 10px; */
+/* .button{
+   
     border-radius: 10px;
     border: none;
     background-color: #2390f6;
     color: white;
     cursor: pointer;
-}
+}  */
